--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Montserrat"
     />
-    <title>Vite App</title>
+    <title>Notas App</title>
   </head>
   <body>
     <div id="root"></div>
